# lfg-ctest

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ai.md  lfg-ctest-mock.c  lfg-ctest-mock.h  lfg-ctest.c  lfg-ctest.h  lfg_ctest.c  lfg_ctest.h  lfg_ctest_mock.c  lfg_ctest_mock.h  lfgtest.c  lfgtest.h  lfgtest_mock.c  lfgtest_mock.h  test-amalg.c  test-mock.c  test-unified.c  test_amalg.c  test_mock.c  test_unified.c
.ai/: architecture.md  build-and-test.md
.gitea/workflows/: ci.yml
tools/: amalgamate.c  amalgamate.manifest  mkrelease.c  mkversion.c
